continued with set up. Ready for functions. Then Inquirer.

--- a/.env
+++ b/.env
@@ -1,5 +1,14 @@
-js
+
+
 # Spotify API keys
 
-SPOTIFY_ID=your-spotify-id
-SPOTIFY_SECRET=your-spotify-secret
+  SPOTIFY_ID=18d14c930fa4456ba6e57a9c07dfb624
+  SPOTIFY_SECRET=9f278a185e334793afa769b7dfb046cd
+
+# OMDB API key
+
+  OMDB_KEY=1aa126ee
+
+# Bands In Town via SwaggerHub
+
+  BANDS_KEY=334268c3-6ea6-44c8-9278-0d4e8a5c8278
