--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/ashmohney/LIRI-node-app/issues"
   },
-  "homepage": "https://github.com/ashmohney/LIRI-node-app#readme"
+  "homepage": "https://github.com/ashmohney/LIRI-node-app#readme",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "dotenv": "^6.2.0",
+    "inquirer": "^6.2.2",
+    "moment": "^2.24.0",
+    "node-spotify-api": "^1.0.7"
+  }
 }
